left panel acenario added